--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <header>
+        <h2><img src="imagenes/logo.png" class="imgheader"="logo del reto"></h2>
+
        <h1>CHALLENGER ORACLE 1</h1>
-       <h2><img src="imagenes/logo.png" alt="logo del reto"></h2>
     </header>
     <main>
         <div class="contenedor-encriptador">
@@ -29,14 +30,14 @@
             </div>
             
             <div class="advertencia">
-                <i class="fas fa-exclamation-triangle"></i> <p>¡No se admiten mayúsculas!</p>
+                <i class="fas fa-exclamation-triangle"></i> <p>¡¡No se admiten mayusculas, caracteres especiales y/o letras con acentos!</p>
             </div>
         </div>
     </main>
     <footer>
         <div class="contenedor-footer">
             <div class="footer-logo">
-                <img src="imagenes/logo.png" alt="Tu Logo">
+                <img src="imagenes/logo.png" class="imgfooter "alt="Tu Logo">
             </div>
             <div class="footer-info">
                 <h3>ALEXANDER RODRIGUEZ</h3>
